--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "936d4703",
    "metadata": {},
    "outputs": [],
@@ -28,12 +28,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "43bf04a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.07142857 0.14285714 0.21428571 0.28571429 0.35714286\n",
+      " 0.42857143 0.5        0.57142857 0.64285714 0.71428571 0.78571429\n",
+      " 0.85714286 0.92857143 1.        ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# here we generate sequence of 15 floats.\n",
+    "# to set the start we use \"start\" parameter, here we start at 1\n",
+    "# to set the last number we use \"stop\" parameter, here we end at 15\n",
+    "# to set the number of elements to generate we use \"num\" parameter, here have 15\n",
+    "seq= np.linspace(start=0,stop=1, num=15)\n",
+    "print(seq)"
    ]
   },
   {
@@ -54,12 +69,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "id": "c1c3f9dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "our 3d-array (matrix): \n",
+      "[[ 1.1  2.1  3.1]\n",
+      " [ 4.1  5.1  6.1]\n",
+      " [ 7.1  8.1  9.1]\n",
+      " [10.1 11.1 12.1]]\n",
+      "\n",
+      " shape: (4, 3)\n",
+      "\n",
+      "\n",
+      "our 3d-array (matrix): \n",
+      "[[[ 1.1  2.1  3.1]\n",
+      "  [ 4.1  5.1  6.1]]\n",
+      "\n",
+      " [[ 7.1  8.1  9.1]\n",
+      "  [10.1 11.1 12.1]]]\n",
+      "\n",
+      " shape: (2, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# step-1: create the array's\n",
+    "a1 = np.array([1.1, 2.1, 3.1])\n",
+    "a2 = np.array([4.1, 5.1, 6.1])\n",
+    "a3 = np.array([7.1, 8.1, 9.1])\n",
+    "a4 = np.array([10.1, 11.1, 12.1])\n",
+    "\n",
+    "# step-2: now we need to merge the arrays to reshape them this can be achived by different ways, here i will use vstack\n",
+    "arr3d = np.vstack([a1,a2,a3,a4]) # now we have a (4,3) array\n",
+    "print(f\"our 3d-array (matrix): \\n{arr3d}\\n\\n shape: {arr3d.shape}\")\n",
+    "\n",
+    "# step-3: now we want to reshape it to fit our shape (2,2,3), to do this we can use np.reshape()\n",
+    "arr3d = arr3d.reshape((2,2,3))\n",
+    "print(f\"\\n\\nour 3d-array (matrix): \\n{arr3d}\\n\\n shape: {arr3d.shape}\")"
    ]
   },
   {
@@ -78,12 +129,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "id": "6e90d6a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "our 3d-array (array of matrices): \n",
+      "[[[ 1.1  2.1  3.1]\n",
+      "  [ 4.1  5.1  6.1]]\n",
+      "\n",
+      " [[ 7.1  8.1  9.1]\n",
+      "  [10.1 11.1 12.1]]]\n",
+      "\n",
+      "Array's type: <class 'numpy.ndarray'>\n",
+      "Array's elements datatype: float64\n",
+      "Array's shape: (2, 2, 3)\n",
+      "Array's size: 12\n",
+      "Array's dimention: 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# here we will print the details of our 3d-array\n",
+    "print(f\"our 3d-array (array of matrices): \\n{arr3d}\")\n",
+    "print(\"\")\n",
+    "print(f\"Array's type: {type(arr3d)}\")\n",
+    "print(f\"Array's elements datatype: {arr3d.dtype}\")\n",
+    "print(f\"Array's shape: {arr3d.shape}\")\n",
+    "print(f\"Array's size: {arr3d.size}\")\n",
+    "print(f\"Array's dimention: {arr3d.ndim}\")"
    ]
   },
   {
@@ -99,12 +176,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "id": "e9f5c88c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "our 3d-array (array of matrices): \n",
+      "[[[ 1.1  2.1  3.1]\n",
+      "  [ 4.1  5.1  6.1]]\n",
+      "\n",
+      " [[ 7.1  8.1  9.1]\n",
+      "  [10.1 11.1 12.1]]]\n",
+      "\n",
+      " number of dimensions: 3\n",
+      " shape: (2, 2, 3)\n",
+      "\n",
+      "\n",
+      "our 4d-array (matrix of matrices): \n",
+      "[[[[ 1.1  2.1  3.1]]\n",
+      "\n",
+      "  [[ 4.1  5.1  6.1]]]\n",
+      "\n",
+      "\n",
+      " [[[ 7.1  8.1  9.1]]\n",
+      "\n",
+      "  [[10.1 11.1 12.1]]]]\n",
+      "\n",
+      " number of dimensions: 4\n",
+      " shape: (2, 2, 1, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# this is our old 3d-array we want to reshape it to be a 4d array\n",
+    "print(f\"our 3d-array (array of matrices): \\n{arr3d}\\n\\n number of dimensions: {arr3d.ndim}\\n shape: {arr3d.shape}\")\n",
+    "\n",
+    "'''\n",
+    "To solve this question we need to consider the 4d-array as a matrix of matrices, where each element is a 3-D array.\n",
+    "The shape of the 4d-array should be such that multiplying its dimensions gives the total number of elements.\n",
+    "Example, with 4 arrays of 3 elements each (totaling 12 elements), \n",
+    "possible shapes are:\n",
+    "    [\n",
+    "        (1, 1, 2, 6),\n",
+    "        (1, 2, 2, 3), \n",
+    "        (2, 1, 1, 6),\n",
+    "        (2, 2, 1, 3)\n",
+    "    ]\n",
+    "'''\n",
+    "# here i went with 2,2,1,3\n",
+    "arr4d = arr3d.reshape((2,2,1,3))\n",
+    "print(f\"\\n\\nour 4d-array (matrix of matrices): \\n{arr4d}\\n\\n number of dimensions: {arr4d.ndim}\\n shape: {arr4d.shape}\")"
    ]
   },
   {
@@ -121,12 +245,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "id": "8135b045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "our 4d-array (matrix of matrices): \n",
+      "[[[[ 1  2  3]]\n",
+      "\n",
+      "  [[ 4  5  6]]]\n",
+      "\n",
+      "\n",
+      " [[[ 7  8  9]]\n",
+      "\n",
+      "  [[10 11 12]]]]\n",
+      "\n",
+      " number of dimensions: 4\n",
+      " dtype: int32\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# this can be solved by may ways but here i will use astype()\n",
+    "arr4dInt =arr4d.astype(int)\n",
+    "\n",
+    "print(f\"\\n\\nour 4d-array (matrix of matrices): \\n{arr4dInt}\\n\\n number of dimensions: {arr4dInt.ndim}\\n dtype: {arr4dInt.dtype}\")"
    ]
   },
   {
@@ -142,12 +290,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 95,
    "id": "a0d58d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The output of np.nditer(arr4dInt): [array(1), array(2), array(3), array(4), array(5), array(6), array(7), array(8), array(9), array(10), array(11), array(12)]\n",
+      "\n",
+      "Loop Result:\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# np.nditer(arr4dInt) will return iterable object, this object can be used traverse the elements of our arr4dInt\n",
+    "print(f\"The output of np.nditer(arr4dInt): {list(np.nditer(arr4dInt))}\\n\")\n",
+    "\n",
+    "print(\"Loop Result:\")\n",
+    "# this is how to traverse the elements of an array no matter its dimensions\n",
+    "for element in np.nditer(arr4dInt):\n",
+    "    print(element)"
    ]
   },
   {
@@ -161,12 +337,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 102,
    "id": "6e12e2d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "''' \n",
+    "    # First index : 1\n",
+    "    [\n",
+    "        # Second index\n",
+    "        [\n",
+    "            # Third Index\n",
+    "            [\n",
+    "                #Fourth Index\n",
+    "                [ 1,  2,  3]\n",
+    "            ],\n",
+    "            [\n",
+    "                #Fourth Index\n",
+    "                [ 4,  5,  6]\n",
+    "            ]\n",
+    "        ],\n",
+    "\n",
+    "        # Second index: 0\n",
+    "        [\n",
+    "            # Third Index: 0\n",
+    "            [\n",
+    "                #Fourth Index: 1\n",
+    "                [ 7,  8,  9]\n",
+    "            ],\n",
+    "            [\n",
+    "                [10, 11, 12]\n",
+    "            ]\n",
+    "        ]\n",
+    "    ]\n",
+    "        '''\n",
+    "\n",
+    "# to print number 8 we can refer to the comment above to traverse the array using slicing or indexing\n",
+    "print(arr4dInt[1][0][0][1])"
    ]
   },
   {
@@ -180,12 +395,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 103,
    "id": "c3218bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "''' \n",
+    "    # First index : 0\n",
+    "    [\n",
+    "        # Second index: 1\n",
+    "        [\n",
+    "            # Third Index: 0\n",
+    "            [\n",
+    "                #Fourth Index\n",
+    "                [ 1,  2,  3]\n",
+    "            ],\n",
+    "            [\n",
+    "                #Fourth Index: [1:3]\n",
+    "                [ 4,  5,  6]\n",
+    "            ]\n",
+    "        ],\n",
+    "\n",
+    "        # Second index\n",
+    "        [\n",
+    "            # Third Index\n",
+    "            [\n",
+    "                #Fourth Index\n",
+    "                [ 7,  8,  9]\n",
+    "            ],\n",
+    "            [\n",
+    "                [10, 11, 12]\n",
+    "            ]\n",
+    "        ]\n",
+    "    ]\n",
+    "        '''\n",
+    "\n",
+    "# to print number 5 and 6 we can refer to the comment above to traverse the array using slicing or indexing\n",
+    "print(arr4dInt[0][1][0][1:3])"
    ]
   },
   {
@@ -203,12 +457,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 117,
    "id": "ddaf0146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the index is:[1, 0, 0, 1]\n",
+      "output is: [8]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# here we will use np.where() and pass \"arr4dInt == 8\", this will return the index where 8 is\n",
+    "index = np.where(arr4dInt == 8)\n",
+    "print(f\"the index is:{[int(i) for i in index]} \\noutput is: {arr4dInt[index]}\")"
    ]
   },
   {
@@ -231,12 +496,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 125,
    "id": "d9b632bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target shape: (2, 3, 2)\n",
+      "old array shape: (2, 2, 1, 3) \n",
+      "new array shape: (2, 3, 2)\n",
+      " new array: \n",
+      "[[[ 1  2]\n",
+      "  [ 3  4]\n",
+      "  [ 5  6]]\n",
+      "\n",
+      " [[ 7  8]\n",
+      "  [ 9 10]\n",
+      "  [11 12]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# to solve this issue we count the shape or use .shape for this array\n",
+    "temp = np.array([\n",
+    "    [[ 1, 2], [ 3,  4], [ 5,  6]],\n",
+    "    [[ 7,  8],[ 9, 10],[11, 12]]\n",
+    "    ])\n",
+    "\n",
+    "print(f\"Target shape: {temp.shape}\")\n",
+    "arr4dInt3d = arr4dInt.reshape((2,3,2))\n",
+    "print(f\"old array shape: {arr4dInt.shape} \\nnew array shape: {arr4dInt3d.shape}\\n new array: \\n{arr4dInt3d}\")"
    ]
   },
   {
@@ -252,12 +543,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 193,
    "id": "d6acdeaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B']\n",
+      " ['E' 'F']\n",
+      " ['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined_array = np.concatenate((arr1,arr2))\n",
+    "print(joined_array)"
    ]
   },
   {
@@ -270,12 +576,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 194,
    "id": "b849658c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['A' 'B']\n",
+      "  ['C' 'D']]\n",
+      "\n",
+      " [['E' 'F']\n",
+      "  ['G' 'H']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "joined_array_1 = np.stack((arr1,arr2), axis=1)\n",
+    "print(joined_array_1)"
    ]
   },
   {
@@ -289,12 +608,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 243,
    "id": "7f7f5e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array 1: \n",
+      "[[['A']\n",
+      "  ['E']]\n",
+      "\n",
+      " [['B']\n",
+      "  ['F']]]\n",
+      " shape: (2, 2, 1)\n",
+      "\n",
+      "Array 2: \n",
+      "[[['C']\n",
+      "  ['G']]\n",
+      "\n",
+      " [['D']\n",
+      "  ['H']]]\n",
+      " shape: (2, 2, 1)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# Step 1: Split the array into 2 arrays along axis 0\n",
+    "split_arrays = np.split(joined_array, 2, axis=0)\n",
+    "\n",
+    "\n",
+    "# Step 2: Split the arrays inside each array to have 4 arrays inside each\n",
+    "for i in range(len(split_arrays)):\n",
+    "    split_arrays[i] = np.split(split_arrays[i], 2, axis=1)\n",
+    "\n",
+    "# cast it into np.array\n",
+    "split_arrays =  np.array(split_arrays)\n",
+    "\n",
+    "print(f\"Array 1: \\n{split_arrays[0]}\\n shape: {split_arrays[0].shape}\\n\")\n",
+    "print(f\"Array 2: \\n{split_arrays[1]}\\n shape: {split_arrays[0].shape}\")"
    ]
   }
  ],
