--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 3,
    "id": "936d4703",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "43bf04a5",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "c1c3f9dc",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "6e90d6a0",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "e9f5c88c",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "8135b045",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "id": "6e12e2d7",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "id": "c3218bcb",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "id": "ddaf0146",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        " array([1], dtype=int64))"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 12,
    "id": "d9b632bd",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "        [11, 12]]])"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 13,
    "id": "d6acdeaf",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 14,
    "id": "b849658c",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 23,
    "id": "7f7f5e49",
    "metadata": {},
    "outputs": [
@@ -519,19 +519,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([['A', 'B'],\n",
-      "       ['E', 'F'],\n",
-      "       ['C', 'D'],\n",
-      "       ['G', 'H']], dtype='<U1'), array([], shape=(4, 0), dtype='<U1')]\n"
+      "[['A' 'B']\n",
+      " ['E' 'F']]\n",
+      "[['C' 'D']\n",
+      " ['G' 'H']]\n"
      ]
     }
    ],
    "source": [
     "# write your code here ^_^\n",
     "\n",
-    "split_array = np.split(joined_array,[2],axis=1)\n",
+    "split_array1 = np.split(arr1,[2],axis=1)[0]\n",
+    "split_array2 = np.split(arr2,[2],axis=1)[0]\n",
     "\n",
-    "print(split_array)"
+    "print(split_array1)\n",
+    "print(split_array2)\n"
    ]
   }
  ],
