--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "212fd1ba",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "3307454f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "x = np.array([1])"
    ]
   },
   {
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "9550b063",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "y = np.array([])"
    ]
   },
   {
@@ -56,12 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "71070d1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=float64)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "x + y"
    ]
   },
   {
@@ -74,12 +85,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "32627c83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array x's dimension  1\n",
+      "array x's shape  (1,)\n",
+      "array x's size  1\n",
+      "array x's type  int32\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(\"array x's dimension \", x.ndim)\n",
+    "print(\"array x's shape \", x.shape)\n",
+    "print(\"array x's size \", x.size)\n",
+    "print(\"array x's type \", x.dtype)"
    ]
   },
   {
@@ -98,12 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "b9c7bbb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12]\n",
+      " [13 14]\n",
+      " [15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "w = np.array([[11, 12], [13, 14],[15, 16]])\n",
+    "print(w)"
    ]
   },
   {
@@ -116,12 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "cee8aba0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "z = np.array([1, 2, 3])"
    ]
   },
   {
@@ -134,12 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "d218f892",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# reshape\n",
+    "newZ = np.reshape(z, (len(z), 1))\n",
+    "newArray = np.concatenate((newZ, w), axis=1)"
    ]
   },
   {
@@ -152,12 +190,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "abbed923",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "11\n",
+      "12\n",
+      "2\n",
+      "13\n",
+      "14\n",
+      "3\n",
+      "15\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "for x in newArray:\n",
+    "    for elements in x:\n",
+    "        print(elements)"
    ]
   },
   {
@@ -170,12 +226,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "12e3f0db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[16 15  3]\n",
+      " [14 13  2]\n",
+      " [12 11  1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "revArray = np.flip(newArray)\n",
+    "print(revArray)"
    ]
   },
   {
@@ -188,12 +255,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "aea004df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 10 11]\n",
+      " [ 1 12 13]\n",
+      " [ 2 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray -= 1\n",
+    "print(newArray)"
    ]
   },
   {
@@ -206,12 +284,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "4ea08613",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(newArray.max())\n",
+    "print(newArray.min())"
    ]
   },
   {
@@ -224,12 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "73e3b5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print (newArray[0][0])"
    ]
   },
   {
@@ -242,12 +338,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "7ad660b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(newArray[1][1])"
    ]
   },
   {
@@ -260,12 +364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "31fb5fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 13\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print( newArray [0][0], newArray[1][2] )"
    ]
   },
   {
@@ -278,12 +390,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "35f224ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0]\n",
+      " [10]\n",
+      " [11]\n",
+      " [ 1]\n",
+      " [12]\n",
+      " [13]\n",
+      " [ 2]\n",
+      " [14]\n",
+      " [15]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray = np.reshape(newArray, (9, 1))\n",
+    "print(newArray)"
    ]
   },
   {
@@ -291,17 +420,28 @@
    "id": "e6d104c5",
    "metadata": {},
    "source": [
-    "## Q#16: Change the shape of \"newArray\" to (3,2)."
+    "## Q#16: Change the shape of \"newArray\" to (3,3)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "724d51d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 10 11]\n",
+      " [ 1 12 13]\n",
+      " [ 2 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray = np.reshape(newArray, (3, 3))\n",
+    "print(newArray)"
    ]
   },
   {
@@ -329,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
