--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "id": "936d4703",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np"
    ]
   },
   {
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "id": "43bf04a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "seq = np.linspace(0.0, 1.0, 15)"
    ]
   },
   {
@@ -54,12 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "id": "c1c3f9dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.1  2.1  3.1]\n",
+      " [ 4.1  5.1  6.1]\n",
+      " [ 7.1  8.1  9.1]\n",
+      " [10.1 11.1 12.1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "arr1 = np.array([1.1, 2.1, 3.1])\n",
+    "arr2 = np.array([4.1, 5.1, 6.1])\n",
+    "arr3 = np.array([7.1, 8.1, 9.1])\n",
+    "arr4 = np.array([10.1, 11.1, 12.1])\n",
+    "new3D = np.array ([arr1, arr2, arr3, arr4])\n",
+    "print(new3D)"
    ]
   },
   {
@@ -78,12 +94,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "id": "6e90d6a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array type: <class 'numpy.ndarray'> \n",
+      "array data type:  float64 \n",
+      "array shape:  (4, 3) \n",
+      "array size:  12 \n",
+      "array dimention:  2\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print('array type:', type(new3D), '\\narray data type: ', new3D.dtype, '\\narray shape: ', new3D.shape, '\\narray size: ', new3D.size, '\\narray dimention: ', new3D.ndim)"
    ]
   },
   {
@@ -99,12 +127,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "id": "e9f5c88c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array dimension : 4\n",
+      "array shape:  (1, 4, 3, 1)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "new4D = np.expand_dims(np.expand_dims(new3D, axis=0), axis=-1)\n",
+    "print('array dimension :', new4D.ndim)\n",
+    "print('array shape: ', new4D.shape)"
    ]
   },
   {
@@ -121,12 +160,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 82,
    "id": "8135b045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[ 1]\n",
+      "   [ 2]\n",
+      "   [ 3]]\n",
+      "\n",
+      "  [[ 4]\n",
+      "   [ 5]\n",
+      "   [ 6]]\n",
+      "\n",
+      "  [[ 7]\n",
+      "   [ 8]\n",
+      "   [ 9]]\n",
+      "\n",
+      "  [[10]\n",
+      "   [11]\n",
+      "   [12]]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "new4DTOint = new4D.astype(int)\n",
+    "print(new4DTOint)"
    ]
   },
   {
@@ -142,12 +204,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "id": "a0d58d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "for x in new4DTOint.flatten():\n",
+    "    print(x)"
    ]
   },
   {
@@ -161,12 +243,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 84,
    "id": "6e12e2d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "num8 = new4DTOint[0, 2, 1, 0]\n",
+    "print(num8)"
    ]
   },
   {
@@ -180,12 +271,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "id": "c3218bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 6\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "num5 = new4DTOint[0, 1, 1, 0]\n",
+    "num6 = new4DTOint[0, 1, 2, 0]\n",
+    "print(num5, num6)"
    ]
   },
   {
@@ -203,12 +304,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 86,
    "id": "ddaf0146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0]\n",
+      " [2 0]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "search =  np.argwhere(np.where(new4DTOint == 8))\n",
+    "print(search)"
    ]
   },
   {
@@ -231,12 +342,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "id": "d9b632bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2]\n",
+      "  [ 3  4]\n",
+      "  [ 5  6]]\n",
+      "\n",
+      " [[ 7  8]\n",
+      "  [ 9 10]\n",
+      "  [11 12]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "new4DTOint = new4DTOint.reshape(2, 3, 2)\n",
+    "print(new4DTOint)"
    ]
   },
   {
@@ -252,12 +378,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 88,
    "id": "d6acdeaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B']\n",
+      " ['E' 'F']\n",
+      " ['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "join = np.concatenate((arr1, arr2))\n",
+    "print(join)"
    ]
   },
   {
@@ -270,12 +410,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 89,
    "id": "b849658c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B' 'C' 'D']\n",
+      " ['E' 'F' 'G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "join = np.concatenate((arr1, arr2), axis=1)\n",
+    "print(join)"
    ]
   },
   {
@@ -289,12 +439,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 90,
    "id": "7f7f5e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([['A', 'B'],\n",
+      "       ['E', 'F']], dtype='<U1'), array([['C', 'D'],\n",
+      "       ['G', 'H']], dtype='<U1')]\n",
+      "[array([['A', 'B'],\n",
+      "       ['E', 'F']], dtype='<U1'), array([['C', 'D'],\n",
+      "       ['G', 'H']], dtype='<U1')]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "join = np.split(join, 2, axis=1)\n",
+    "for array in join:\n",
+    "    print(join)"
    ]
   }
  ],
@@ -314,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
