--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "id": "936d4703",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np"
    ]
   },
   {
@@ -28,12 +28,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
    "id": "43bf04a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.          0.71428571  1.42857143  2.14285714  2.85714286  3.57142857\n",
+      "  4.28571429  5.          5.71428571  6.42857143  7.14285714  7.85714286\n",
+      "  8.57142857  9.28571429 10.        ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "sequence = np.linspace(0.0, 10.0, 15)\n",
+    "\n",
+    "print(sequence)"
    ]
   },
   {
@@ -54,12 +67,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
    "id": "c1c3f9dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1.1  2.1  3.1]\n",
+      "  [ 4.1  5.1  6.1]]\n",
+      "\n",
+      " [[ 7.1  8.1  9.1]\n",
+      "  [10.1 11.1 12.1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "arr1 = np.array([1.1, 2.1, 3.1])\n",
+    "arr2 = np.array([4.1, 5.1, 6.1])\n",
+    "arr3 = np.array([7.1, 8.1, 9.1])\n",
+    "arr4 = np.array([10.1, 11.1, 12.1])\n",
+    "\n",
+    "\n",
+    "arr= np.array([arr1, arr2, arr3, arr4])\n",
+    "arr = arr.reshape(2, 2, 3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(arr)\n"
    ]
   },
   {
@@ -78,12 +118,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 109,
    "id": "6e90d6a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "float64\n",
+      "(2, 2, 3)\n",
+      "12\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "print(type(arr))\n",
+    "\n",
+    "print(arr.dtype)\n",
+    "\n",
+    "print(arr.shape)\n",
+    "\n",
+    "\n",
+    "print(arr.size)\n",
+    "\n",
+    "\n",
+    "print(arr.ndim)\n"
    ]
   },
   {
@@ -99,12 +164,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 110,
    "id": "e9f5c88c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "(2, 2, 1, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "arr = arr.reshape(2, 2, 1, 3)\n",
+    "\n",
+    "\n",
+    "print(arr.ndim)\n",
+    "print(arr.shape)"
    ]
   },
   {
@@ -121,12 +200,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 111,
    "id": "8135b045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[ 1  2  3]]\n",
+      "\n",
+      "  [[ 4  5  6]]]\n",
+      "\n",
+      "\n",
+      " [[[ 7  8  9]]\n",
+      "\n",
+      "  [[10 11 12]]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "int_arr = arr.astype(int)\n",
+    "\n",
+    "# Print the new array\n",
+    "print(int_arr)\n",
+    "\n"
    ]
   },
   {
@@ -142,12 +241,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 112,
    "id": "a0d58d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1\n",
+      "2.1\n",
+      "3.1\n",
+      "4.1\n",
+      "5.1\n",
+      "6.1\n",
+      "7.1\n",
+      "8.1\n",
+      "9.1\n",
+      "10.1\n",
+      "11.1\n",
+      "12.1\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "for elem in np.nditer(arr):\n",
+    "    print(elem)"
    ]
   },
   {
@@ -161,12 +281,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 113,
    "id": "6e12e2d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.1\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "num_8 = arr[0, 1, 0, 1]\n",
+    "\n",
+    "print(num_8)"
    ]
   },
   {
@@ -180,12 +311,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 114,
    "id": "c3218bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "print(int_arr[0,1,0,1])\n",
+    "print(int_arr[0,1,0,2])\n"
    ]
   },
   {
@@ -203,12 +347,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 115,
    "id": "ddaf0146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([], dtype=int64), array([], dtype=int64), array([], dtype=int64), array([], dtype=int64))\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "indexx = np.where(arr == 8)\n",
+    "print(indexx)\n"
    ]
   },
   {
@@ -231,12 +385,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 121,
    "id": "d9b632bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2]\n",
+      "  [ 3  4]\n",
+      "  [ 5  6]]\n",
+      "\n",
+      " [[ 7  8]\n",
+      "  [ 9 10]\n",
+      "  [11 12]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "reshaped_array = int_arr.reshape(2, 3, 2)\n",
+    "print(reshaped_array)"
    ]
   },
   {
@@ -252,12 +422,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 122,
    "id": "d6acdeaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B']\n",
+      " ['E' 'F']\n",
+      " ['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined_array = np.concatenate((arr1, arr2))\n",
+    "print(joined_array)"
    ]
   },
   {
@@ -270,12 +456,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 123,
    "id": "b849658c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B' 'C' 'D']\n",
+      " ['E' 'F' 'G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "joined_array_rows = np.concatenate((arr1, arr2), axis=1)\n",
+    "print(joined_array_rows)"
    ]
   },
   {
@@ -289,12 +486,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 124,
    "id": "7f7f5e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Split arrays along axis 1:\n",
+      "[['A']\n",
+      " ['E']\n",
+      " ['C']\n",
+      " ['G']]\n",
+      "[['B']\n",
+      " ['F']\n",
+      " ['D']\n",
+      " ['H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "split_arrays = np.split(joined_array, 2, axis=1)\n",
+    "print(\"Split arrays along axis 1:\")\n",
+    "for arr in split_arrays:\n",
+    "    print(arr)\n"
    ]
   }
  ],
@@ -314,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
