--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "936d4703",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "43bf04a5",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "id": "c1c3f9dc",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "id": "6e90d6a0",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "id": "e9f5c88c",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "id": "8135b045",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "id": "a0d58d15",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "id": "6e12e2d7",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "id": "c3218bcb",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
    "id": "ddaf0146",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the index is:[1, 0, 0, 1]\n",
+      "the index is:[1, 0, 0, 1] \n",
       "output is: [8]\n"
      ]
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "id": "d9b632bd",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 14,
    "id": "d6acdeaf",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 15,
    "id": "b849658c",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 25,
    "id": "7f7f5e49",
    "metadata": {},
    "outputs": [
@@ -623,14 +623,15 @@
       " [['B']\n",
       "  ['F']]]\n",
       " shape: (2, 2, 1)\n",
-      "\n",
       "Array 2: \n",
       "[[['C']\n",
       "  ['G']]\n",
       "\n",
       " [['D']\n",
       "  ['H']]]\n",
-      " shape: (2, 2, 1)\n"
+      " shape: (2, 2, 1)\n",
+      "\n",
+      "The shape (2,2,1) for each array is 2*2*1 for each depth, that means we have four arrays achiving our initial goal\n"
      ]
     }
    ],
@@ -646,9 +647,20 @@
     "# cast it into np.array\n",
     "split_arrays =  np.array(split_arrays)\n",
     "\n",
-    "print(f\"Array 1: \\n{split_arrays[0]}\\n shape: {split_arrays[0].shape}\\n\")\n",
-    "print(f\"Array 2: \\n{split_arrays[1]}\\n shape: {split_arrays[0].shape}\")"
+    "\n",
+    "print(f\"Array 1: \\n{split_arrays[0]}\\n shape: {split_arrays[0].shape}\")\n",
+    "print(f\"Array 2: \\n{split_arrays[1]}\\n shape: {split_arrays[1].shape}\")\n",
+    "\n",
+    "print(\"\\nThe shape (2,2,1) for each array is 2*2*1 for each depth that means we have four arrays achiving our initial goal\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03c6e50a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
