--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "936d4703",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "43bf04a5",
    "metadata": {},
    "outputs": [
@@ -38,15 +38,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.          0.30612245  0.6122449   0.91836735  1.2244898   1.53061224\n",
-      "  1.83673469  2.14285714  2.44897959  2.75510204  3.06122449  3.36734694\n",
-      "  3.67346939  3.97959184  4.28571429  4.59183673  4.89795918  5.20408163\n",
-      "  5.51020408  5.81632653  6.12244898  6.42857143  6.73469388  7.04081633\n",
-      "  7.34693878  7.65306122  7.95918367  8.26530612  8.57142857  8.87755102\n",
-      "  9.18367347  9.48979592  9.79591837 10.10204082 10.40816327 10.71428571\n",
-      " 11.02040816 11.32653061 11.63265306 11.93877551 12.24489796 12.55102041\n",
-      " 12.85714286 13.16326531 13.46938776 13.7755102  14.08163265 14.3877551\n",
-      " 14.69387755 15.        ]\n"
+      "[0.         0.21428571 0.42857143 0.64285714 0.85714286 1.07142857\n",
+      " 1.28571429 1.5        1.71428571 1.92857143 2.14285714 2.35714286\n",
+      " 2.57142857 2.78571429 3.        ]\n"
      ]
     }
    ],
@@ -56,8 +50,9 @@
     "num_elements = 15\n",
     "\n",
     "start = 0.0\n",
+    "end = 3.0\n",
     "\n",
-    "float_array = np.linspace(start,num_elements)\n",
+    "float_array = np.linspace(start, end, num_elements)\n",
     "\n",
     "print(float_array)"
    ]
@@ -80,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "c1c3f9dc",
    "metadata": {},
    "outputs": [
@@ -126,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "6e90d6a0",
    "metadata": {},
    "outputs": [
@@ -169,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "e9f5c88c",
    "metadata": {},
    "outputs": [
@@ -214,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "8135b045",
    "metadata": {},
    "outputs": [
@@ -251,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 36,
    "id": "a0d58d15",
    "metadata": {},
    "outputs": [
@@ -293,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "6e12e2d7",
    "metadata": {},
    "outputs": [
@@ -323,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "c3218bcb",
    "metadata": {},
    "outputs": [
@@ -359,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "ddaf0146",
    "metadata": {},
    "outputs": [
@@ -372,7 +367,7 @@
        " array([1], dtype=int64))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "d9b632bd",
    "metadata": {},
    "outputs": [
@@ -411,16 +406,15 @@
      "data": {
       "text/plain": [
        "array([[[ 1,  2],\n",
-       "        [ 3,  7]],\n",
+       "        [ 3,  7],\n",
+       "        [ 8,  9]],\n",
        "\n",
-       "       [[ 8,  9],\n",
-       "        [ 4,  5]],\n",
-       "\n",
-       "       [[ 6, 10],\n",
+       "       [[ 4,  5],\n",
+       "        [ 6, 10],\n",
        "        [11, 12]]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +422,7 @@
    "source": [
     "# write your code here ^_^\n",
     "\n",
-    "array_4D_int.reshape((3,2,2))"
+    "array_4D_int.reshape(2,3,2)"
    ]
   },
   {
@@ -444,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "d6acdeaf",
    "metadata": {},
    "outputs": [
@@ -461,10 +455,11 @@
    ],
    "source": [
     "# write your code here ^_^\n",
+    "\n",
     "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
     "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
     "\n",
-    "joined_array = np.concatenate([arr1, arr2])\n",
+    "joined_array = np.concatenate((arr1, arr2))\n",
     "\n",
     "print(joined_array)\n"
    ]
@@ -479,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "b849658c",
    "metadata": {},
    "outputs": [
@@ -495,7 +490,7 @@
    "source": [
     "# write your code here ^_^\n",
     "\n",
-    "joined_array1 = np.concatenate([arr1,arr2], axis =1)\n",
+    "joined_array1 = np.concatenate((arr1,arr2), axis =1)\n",
     "\n",
     "print(joined_array1)\n"
    ]
@@ -511,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "7f7f5e49",
    "metadata": {},
    "outputs": [
@@ -519,21 +514,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['A' 'B']\n",
-      " ['E' 'F']]\n",
-      "[['C' 'D']\n",
-      " ['G' 'H']]\n"
+      "[['A']\n",
+      " ['E']\n",
+      " ['C']\n",
+      " ['G']]\n",
+      "[['B']\n",
+      " ['F']\n",
+      " ['D']\n",
+      " ['H']]\n"
      ]
     }
    ],
    "source": [
     "# write your code here ^_^\n",
     "\n",
-    "split_array1 = np.split(arr1,[2],axis=1)[0]\n",
-    "split_array2 = np.split(arr2,[2],axis=1)[0]\n",
     "\n",
-    "print(split_array1)\n",
-    "print(split_array2)\n"
+    "split_array1 = np.split(joined_array,2,axis=1)\n",
+    "\n",
+    "for i in split_array1:\n",
+    "    print(i)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
